aligned language picker correctly

--- a/services/frontend/src/style.css
+++ b/services/frontend/src/style.css
@@ -883,7 +883,7 @@ body::before {
     display: flex;
     position: relative;
     align-items: center;
-    justify-content: left;
+    justify-content: space-between;
     font-family: "Roboto Mono", monospace;
     font-size: 20px;
 }
@@ -1050,6 +1050,9 @@ canvas {
 }
 
 .delete-modal-container {
+    display: flex;
+    width: 90%;
+    max-width: 500px;
     background: linear-gradient(135deg, rgba(34, 34, 34, 0.9), rgba(0, 0, 0, 0.9)); /* Dark gradient background */
     border: 1px solid #d89123;
     border-radius: 10px;
@@ -1057,10 +1060,9 @@ canvas {
         0 0 10px rgba(216, 145, 35, 0.5),
         0 0 20px rgba(216, 145, 35, 0.3);
     padding: 20px;
-    width: 90%;
-    max-width: 500px;
     font-family: "Roboto Mono", monospace;
     color: #d89123;
+    flex-direction: column;
 }
 
 .delete-modal-header h2 {
@@ -1072,6 +1074,14 @@ canvas {
 
 .delete-modal-body p {
     margin: 20px 0;
+}
+
+.delete-modal-footer {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-button {
@@ -1237,6 +1247,15 @@ canvas {
 /* LANGUAGE PICKER */
 
 .dropdown.language-picker {
+    position: relative;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn.btn-secondary.dropdown-toggle {
     display: flex;
     height: 100%;
     width: 100%;
@@ -1265,4 +1284,7 @@ canvas {
 
 .language-picker-container {
     margin-left: auto;
+    margin-right: 100px;
+    display: flex;
+    align-items: center;
 }
